# soma-upgrade-prerequisites

./: .gitignore  Makefile  README.org  pyproject.toml
reference/llm-instructions/: ruff-compliance-rules.md
src/soma_upgrade_prerequisites/: __main__.py  _git_helpers.py  _report.py  cascade.py  cascade_apply.py  cmd_analysis.py  cmd_generate.py  cmd_preview_analysis.py  cmd_show.py  cmd_show_tracker.py  cmd_update_note.py  cmd_update_status.py  cmd_validate.py  cmd_write_analysis.py  config.py  constants.py  critical_path.py  cycle_detection.py  defaults.py  derived_data.py  filesystem.py  git_client.py  graph.py  main.py  models.py  new_deps.py  orphan_classify.py  orphan_detection.py  pipeline.py  pipeline_analyze.py  pipeline_derived.py  (+24 more)
tests/: conftest.py  fake_git.py  fakes.py  helpers.py  test_cmd_analysis.py  test_cmd_generate.py  test_critical_path.py  test_cycle_detection.py  test_derived_data.py  test_fake_git.py  test_fakes.py  test_generate_cycles.py  test_generate_errors.py  test_generate_pipeline.py  test_git_client.py  test_graph.py  test_graph_validation.py  test_new_deps.py  test_orphans.py  test_preserve_statuses.py  test_progress_tracker.py  test_report.py  test_report_table.py  test_report_table_details.py  test_risk_assessment.py  test_show.py  test_show_tracker.py  test_topological_sort.py  test_tracker_io.py  test_update_entry.py  test_update_note.py  test_update_status.py  test_validate.py  test_validate_boundary.py  test_validation.py  test_validation_git.py  test_validation_tracker.py  tracker_test_helpers.py  validate_test_helpers.py
