[project]
name = "soma-upgrade-prerequisites"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "click>=8.3.2",
    "pydantic>=2.13.2",
]

[tool.mypy]
strict = true

[tool.ruff]
line-length = 99
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "SIM", "TCH", "RUF"]

[tool.ruff.lint.flake8-type-checking]
runtime-evaluated-base-classes = ["pydantic.BaseModel", "pydantic.RootModel"]

[dependency-groups]
dev = [
    "mypy>=1.20.1",
    "pytest>=9.0.3",
    "ruff>=0.15.11",
    "shiv>=1.0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
